--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 #端口号
-server.port=8080
+server.port=8888
 #数据库
 
 spring.datasource.username=root
-spring.datasource.password=root123456
+spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://localhost:3306/graduation_project?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #jpa
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.mvc.static-path-pattern=/static/**
+
+spring.jpa.properties.hibernate.query.substitutions=true 1,false 0
