--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #端口号
-server.port=8888
+http.port=8080
+server.port=443
 #数据库
 
 spring.datasource.username=root
@@ -14,3 +15,11 @@ spring.jpa.show-sql=true
 spring.mvc.static-path-pattern=/static/**
 
 spring.jpa.properties.hibernate.query.substitutions=true 1,false 0
+
+#开启https,配置跟证书一样
+server.ssl.key-store=classpath:https.keystore
+server.ssl.enabled=true
+server.ssl.key-store-type=JKS
+server.ssl.key-alias=https
+#server.ssl.key-password=Admin#123456
+server.ssl.key-store-password=Admin#123456
